tests/snapshots/run_wpt_conformance__onnx_quantized_pad_with_constant_mode_for_XNNPack_fusion.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "qdq_subgraph.https.any.js",
    "quantized pad with constant mode for XNNPack fusion",
    "onnx",
    "PASS",
)
