tests/snapshots/run_wpt_conformance__onnx_quantized_pad_with_reflection_mode.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "qdq_subgraph.https.any.js",
    "quantized pad with reflection mode",
    "onnx",
    "PASS",
)
